<resources>
    <string name="app_name">Khai Dai</string>
    <string name="title_activity_home_restaurant">HomeRestaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Log In/Create Account</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Khai Dai</string>
    <string name="menu_gallery">Food List</string>
    <string name="menu_slideshow">Food Details</string>
    <string name="menu_tools">Tools</string>

    <string name="menu_send">Send</string>

    <string name="DiscountFood">Discount Food Items</string>

    <string name="Welcome">Welcome</string>
    //

    <string name="my_orders">My Orders</string>
    <string name="help_center">Help Center</string>
    <string name="terms">Terms &amp; Conditions/Privacy</string>
    <string name="settings">Settings</string>
    <string name="Log_In">Log in</string>
    <string name="LogInWithFacebook">LOG IN WITH FACEBOOK</string>
    <string name="Phone">+880.......</string>
    <string name="Password">Password</string>
    <string name="Log_In2">LOG IN</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="New_User">New user? Create an account</string>
    <string name="Log_out">Log Out</string>
    <string name="Profile">Profile</string>

    <string name="email">Email</string>

    <string name="AlreadyMember">ALready a member? Log in</string>
    <string name="alreadymember">Alreadya member?</string>
    <string name="InfoAccount">Reset Password by using your Registered Account Email.Password will be send to your Email.Reset from there. Thank you!</string>


    <string name="action_clear_cart">Clear Cart</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_share_food">Share Food</string>
    <string name="menu_all_restaurant">Restaurants</string>

    <string name="Sign_Up">Sign Up</string>


    <!-- TODO: Remove or change this placeholder text -->


    <string name="ShowComment">Show Comment</string>


    <string name="menu_food_details">Food Details</string>
    <string name="menu_foodlist">FoodList</string>
    <string name="menu_cart">Cart</string>
    <string name="view_order">My Orders</string>
    <string name="PopularCategory">Popular Foods</string>
    <string name="Best_Deals">Best Deals</string>
    <string name="size">Size</string>
    <string name="addOn">AddOn</string>

    <string name="facebook_app_id">549767969190507</string>
    <string name="fb_login_protocol_name">fb549767969190507</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="terms_and_condition"></string>


</resources>
