<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background2">


    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorHeader"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text= "@string/Best_Deals"
                android:textSize="17sp"
                android:padding="2dp"
                android:textColor="@color/white">

            </TextView>

            <com.asksira.loopingviewpager.LoopingViewPager
                android:id="@+id/viewpager"
                app:isInfinite="true"

                app:autoScroll="true"
                app:scrollInterval="3000"
                app:viewpagerAspectRatio="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.asksira.loopingviewpager.LoopingViewPager>



            <TextView
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorHeader"
                android:padding="2dp"
                android:text="@string/PopularCategory"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyceler_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorHeader"
            android:padding="2dp"
            android:text="@string/DiscountFood"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyceler_popular2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>



    </LinearLayout>




</androidx.core.widget.NestedScrollView>