<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/log_in"
    android:padding="60dp"
    tools:context=".SignIn_SignUp_Fragment.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:id="@+id/logIn"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/courgette"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="16dp"
                android:text="@string/Welcome"
                android:layout_gravity="center"
                android:textSize="30sp" />


        </LinearLayout>





        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxStrokeWidth="1dp"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="10dp"
                        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                        android:drawablePadding="10dp"
                        android:textSize="12sp"
                        android:hint="Email"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/Edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/opensans_regular"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/material_button_Log_In"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="#0B11B4"
                android:text="@string/Log_In"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:id="@+id/Forget_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:fontFamily="@font/opensans_regular"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/Forgot_Password"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:id="@+id/New_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:fontFamily="@font/opensans_regular"
                android:textSize="12sp"
                android:gravity="center"
                android:text="@string/New_User"
                android:textColor="@color/colorPrimaryDark" />



        </LinearLayout>

    </LinearLayout>

</FrameLayout>