<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:weightSum="2.3"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_weight=".5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">

                        <TextView
                            android:id="@+id/food_name1"
                            android:text="Food Name"
                            android:fontFamily="@font/opensans_semibold"
                            android:textColor="@color/black"
                            android:textSize="17sp"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight=".8"

                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <TextView
                            android:text="৳  "
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/food_price"
                            android:text="1000"
                            android:fontFamily="@font/opensans_regular"
                            android:textColor="@color/black"
                            android:textSize="17sp"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                            android:id="@+id/number_button"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            app:backGroundColor="@color/colorAccent"
                            app:finalNumber="20"
                            app:initialNumber="1"
                            app:textSize="12sp">
                        </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RatingBar
                        android:layout_gravity="center"
                        android:id="@+id/ratingBar"
                        android:rating="0"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:max="5"
                        android:isIndicator="true"
                        android:stepSize=".5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </RatingBar>

                    <TextView
                        android:id="@+id/food_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="Food Description"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/size"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <RadioGroup
                        android:orientation="horizontal"
                        android:id="@+id/rdi_group_size"
                        android:weightSum="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </RadioGroup>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/addOn"
                            android:textSize="20sp"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>

                        <ImageView
                            android:id="@+id/img_add_addon"
                            android:layout_marginLeft="4dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/colorAccent"
                            android:src="@drawable/ic_add_box_black_24dp"
                            android:layout_width="30dp"
                            android:layout_height="30dp">

                        </ImageView>

                    </LinearLayout>


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_user_selected_addon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.chip.ChipGroup>


                </LinearLayout>



            </androidx.cardview.widget.CardView>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button_Show_Comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:theme="@style/MatButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/ShowComment"
                android:textColor="@color/colorPrimaryDark"
                app:icon="@drawable/ic_comment_black_24dp"
                app:iconTint="@color/colorPrimaryDark"
                app:rippleColor="#F574111D"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="2dp"
                app:cornerRadius="5dp"
                app:backgroundTint="#F8FCF8FC"

                android:elevation="10dp"
                app:iconGravity="textStart"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.andremion.counterfab.CounterFab
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorAccent"
        app:elevation="10dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true"
        android:src="@drawable/ic_shopping_cart_black_24dp"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#0e0d0e"
            app:expandedTitleTextAppearance="@android:color/transparent">


            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        app:elevation="10dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|start"
        app:useCompatPadding="true"
        android:src="@drawable/ic_star_black_24dp"
        />






</androidx.coordinatorlayout.widget.CoordinatorLayout>